# tree_clipper

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  __init__.py  blender_manifest.toml  common.py  export_nodes.py  export_nodes_special.py  export_nodes_specific.py  import_nodes.py  panel.py  pyproject.toml  specific_abstract.py  specific_handlers.py  ui.py
.github/workflows/: CODE_OF_CONDUCT.md  bundle-extension.yml  release.yml  test.yml
tests/: conftest.py  test_all_nodes.py  test_erindales_nodevember.py  test_external_items.py  test_microscopy_nodes.py  test_molecular_nodes.py  test_multi_input_order.py  test_panel_toggle_order.py  test_render_layers_edgecase.py  test_squishy_volumes.py  test_typst_importer.py  util.py
tests/binary_blend_files/erindales_nodevember_2025/: 01 Pumpkin.blend  02 Fire 2.blend  05 Feather.blend  06 Rivetted.blend  07 Precious.blend  09 Soft.blend  10 Zip.blend  13 Cabin.blend
tests/binary_blend_files/molecular_nodes/: node_data_file.blend
tests/binary_blend_files/squishy_volumes/: new_input.blend
tests/binary_blend_files/typst_importer/: blender_assets.blend  typst.blend
tree_clipper/: __init__.py  blender_manifest.toml  common.py  dynamic_pointer.py  export_nodes.py  id_data_getter.py  import_nodes.py  scene_info.py  specific_abstract.py  specific_handlers.py  ui.py
tree_clipper/ui/: __init__.py  operators_export.py  operators_import.py
treeclipper/: export_nodes.py
