[project]
name = "tree-clipper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bpy>=5.0.1",
]

[[tool.uv.index]]
name = "bpy"
url = "https://bradyajohnston.github.io/dailybpy/"

[dependency-groups]
dev = [
    "fake-bpy-module>=20251003",
    "pytest>=9.0.1",
]